--- a/src/components/css/observatorio.css
+++ b/src/components/css/observatorio.css
@@ -1,6 +1,6 @@
 /* Asegúrate de que la franja-container tenga un estilo de flexbox para distribuir los elementos horizontalmente */
 .search-bar {
-    background-color: #f1f1f1;
+    background-color: #F1F1F1;
     padding: 20px;
   }
   
